--- a/console_wars.ipynb
+++ b/console_wars.ipynb
@@ -5,11 +5,42 @@
    "metadata": {},
    "source": [
     "# GameZone\n",
-    " \n",
+    "\n",
     "### Console Wars\n",
     "\n",
-    "### Author: Wenyi Xu"
+    "### Author: Wenyi Xu\n",
+    "\n",
+    "Discuss the epic console war amongst **Sony**, **Microsoft** and **Nintendo**.\n",
+    "\n",
+    "Scape to get some datasets for analysis and visualization to show the sales and other statistics for different platforms."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
