Add sonsoles release timelines.

--- a/console_wars.ipynb
+++ b/console_wars.ipynb
@@ -19,9 +19,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Backgroud Information\n",
+    "\n",
+    "### Playstation Release timeline\n",
+    "\n",
+    "* PS1 Release Date\tSaturday - December 3, 1994\n",
+    "\n",
+    "* PS2 Release Date\tSaturday - March 4, 2000\n",
+    "\n",
+    "* PS3 Release Date\tSaturday - November 11, 2006\n",
+    "\n",
+    "* PS4 Release Date\tFriday - Nov 15, 2013 \n",
+    "\n",
+    "* PS4 Pro Release\tThursday - Nov 10, 2016 \n",
+    "\n",
+    "### Playstation Release timeline\n",
+    "\n",
+    "* Xbox Release Date\t- November 15, 2001\n",
+    "\n",
+    "* Xbox 360 Release Date\t- November 22, 2005\n",
+    "\n",
+    "* Xbox One Release Date\t- November 22, 2013\n",
+    "\n",
+    "* Xbox One X Release Date - June 13, 2016\n",
+    "\n",
+    "### Nintendo Platforms release timeline\n",
+    "\n",
+    "* NES Release Date - July 15, 1983\n",
+    "\n",
+    "* Nintendo 64 Release Date - June 23, 1996\n",
+    "\n",
+    "* GameCube Release Date - September 14, 2001\n",
+    "\n",
+    "* Wii Release Date - November 19, 2006\n",
+    "\n",
+    "* Wii u Release Date - November 18, 2012\n",
+    "\n",
+    "* Switch Release Date - March 3, 2017\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part 0: Scrape VGChartz\n",
     "\n",
-    "Scrape VGChartz to get useful datasets about game and hardware sales for different platforms."
+    "Scrape VGChartz to get useful datasets about game and hardware sales for different platforms.\n",
+    "\n",
+    "I can only find sales data of home video games consoles on VGChartz starting from 25th Nov 2006 (PS3 & XBOX360 & Wii), so the data of PS2 and other previous consoles need to be extracted from other sources."
    ]
   },
   {
@@ -1387,9 +1432,9 @@
     "collapsed": true
    },
    "source": [
-    "Now we have soup: the HTML of the VGCHartz main page.\n",
+    "Now we have **soup**: the **HTML** of the VGCHartz main page.\n",
     "\n",
-    "Now try t"
+    "Now try to extract some useful data."
    ]
   },
   {
