Extract sales tables.

--- a/console_wars.ipynb
+++ b/console_wars.ipynb
@@ -306,28 +306,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h2 class=\"heading\">Global Hardware by Platform</h2>,\n",
+       " <h2 class=\"heading\">Global Software by Platform</h2>]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tables = vgchartz_week_soup.find_all('h2', attrs={'class': 'heading'})"
+    "tags = vgchartz_week_soup.find_all('h2', attrs={'class': 'heading'})\n",
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract the table names from the corresponding tags"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<h2 class=\"heading\">Global Hardware by Platform</h2>, <h2 class=\"heading\">Global Software by Platform</h2>]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Global Hardware by Platform', 'Global Software by Platform']"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(tables)"
+    "table_names = [tag.text for tag in tags]   \n",
+    "table_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract the Global Hardware by Platform table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "charts = vgchartz_week_soup.find_all('table', class_=\"chart\")\n",
+    "len(charts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After manually check the HTML, I found the 'Global Hardware by Platform' is the 3rd one -_-"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<th align=\"left\">Platform</th>,\n",
+       " <th align=\"right\" colspan=\"2\">Weekly <span style=\"font-size:70%;\">(change)</span></th>,\n",
+       " <th align=\"right\">Total</th>,\n",
+       " <th align=\"left\">Total</th>,\n",
+       " <th align=\"right\" style=\"padding-right:1px;\">2,252,830</th>,\n",
+       " <th align=\"left\" style=\"padding-left:2px;\"><span style=\"font-size:70%;\">(+111%)</span>\n",
+       " </th>,\n",
+       " <th align=\"left\"> </th>]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hardware_sale_table = charts[2]\n",
+    "hardware_sale_table.find_all('th')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Platform', 'Weekly (change)', 'Total']"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hardware_sale_cols = [x.text for x in hardware_sale_table.find_all('th')][:3]\n",
+    "hardware_sale_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<td align=\"left\">DS</td>,\n",
+       " <td align=\"right\" style=\"padding-right:1px;\">905,597</td>,\n",
+       " <td align=\"left\" style=\"padding-left:2px;\"><span style=\"font-size:70%;\">(+88%)</span></td>,\n",
+       " <td align=\"right\">29,319,098</td>,\n",
+       " <td align=\"left\">Wii</td>,\n",
+       " <td align=\"right\" style=\"padding-right:1px;\">529,658</td>,\n",
+       " <td align=\"left\" style=\"padding-left:2px;\"><span style=\"font-size:70%;\">(N/A)</span></td>,\n",
+       " <td align=\"right\">529,658</td>,\n",
+       " <td align=\"left\">X360</td>,\n",
+       " <td align=\"right\" style=\"padding-right:1px;\">361,561</td>,\n",
+       " <td align=\"left\" style=\"padding-left:2px;\"><span style=\"font-size:70%;\">(+87%)</span></td>,\n",
+       " <td align=\"right\">5,943,800</td>,\n",
+       " <td align=\"left\">PSP</td>,\n",
+       " <td align=\"right\" style=\"padding-right:1px;\">352,884</td>,\n",
+       " <td align=\"left\" style=\"padding-left:2px;\"><span style=\"font-size:70%;\">(+87%)</span></td>,\n",
+       " <td align=\"right\">17,124,390</td>,\n",
+       " <td align=\"left\">PS3</td>,\n",
+       " <td align=\"right\" style=\"padding-right:1px;\">103,130</td>,\n",
+       " <td align=\"left\" style=\"padding-left:2px;\"><span style=\"font-size:70%;\">(-50%)</span></td>,\n",
+       " <td align=\"right\">394,937</td>]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hardware_sale_table.find_all('td', attrs={})"
    ]
   },
   {
