Completed scraping function.

--- a/console_wars.ipynb
+++ b/console_wars.ipynb
@@ -102,12 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "import urllib3\n",
     "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
     "from datetime import date\n",
     "from datetime import datetime\n",
     "import math"
@@ -174,6 +175,8 @@
    "metadata": {},
    "source": [
     "### Function get_weekly_url\n",
+    "\n",
+    "**Date --> weekly_url**\n",
     "\n",
     "We have\n",
     "\n",
@@ -386,7 +389,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After manually check the HTML, I found the 'Global Hardware by Platform' is the 3rd one -_-"
+    "After manually check the HTML, I found there are totally 4 charts per page.\n",
+    "\n",
+    "And the 'Global Hardware by Platform' is the 3rd one -_-"
    ]
   },
   {
@@ -415,6 +420,13 @@
    "source": [
     "hardware_sale_table = charts[2]\n",
     "hardware_sale_table.find_all('th')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get all the **colume** names"
    ]
   },
   {
@@ -475,6 +487,200 @@
    ],
    "source": [
     "hardware_sale_table.find_all('td', attrs={})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['DS',\n",
+       " '905,597',\n",
+       " '(+88%)',\n",
+       " '29,319,098',\n",
+       " 'Wii',\n",
+       " '529,658',\n",
+       " '(N/A)',\n",
+       " '529,658',\n",
+       " 'X360',\n",
+       " '361,561',\n",
+       " '(+87%)',\n",
+       " '5,943,800',\n",
+       " 'PSP',\n",
+       " '352,884',\n",
+       " '(+87%)',\n",
+       " '17,124,390',\n",
+       " 'PS3',\n",
+       " '103,130',\n",
+       " '(-50%)',\n",
+       " '394,937']"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hardware_sale_rows = hardware_sale_table.find_all('td', attrs={})\n",
+    "hardware_sale_rows = [row.text.strip() for row in hardware_sale_rows]\n",
+    "hardware_sale_rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function get_weekly_hardware_sales\n",
+    "\n",
+    "**Date --> weekly hardware sales data**\n",
+    "\n",
+    "Given a date from 25th Nov 2006 to 18th Nov 2017, we want to get which week this date is in, and get its corresponding weekly hardware sales data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# date: in datetime format\n",
+    "def get_weekly_hardware_sales(date):\n",
+    "    \n",
+    "    # Get the corresponding weekly_url from input date\n",
+    "    weekly_url = get_weekly_url(date)\n",
+    "    # Create the pool manager\n",
+    "    pool_manager = urllib3.PoolManager()\n",
+    "    \n",
+    "    weekly_response = pool_manager.request('GET', weekly_url)\n",
+    "    weekly_soup = BeautifulSoup(weekly_response.data, \"lxml\")\n",
+    "    \n",
+    "    # Get the weekly hardware sales table\n",
+    "    weekly_charts = weekly_soup.find_all('table', class_=\"chart\")\n",
+    "    weekly_hardware_sale_table = weekly_charts[2]\n",
+    "    # Get the colume names\n",
+    "    # Columes should be 'Platforms', 'Weekly Sales', 'Weekly Sales Changes', 'Total Sales'\n",
+    "    platforms = []\n",
+    "    weekly_sales = []\n",
+    "    weekly_sales_changes = []\n",
+    "    total_sales = []\n",
+    "    weekly_hardware_sale_cols = [x.text for x in weekly_hardware_sale_table.find_all('th')][:3]\n",
+    "    # Get the rows\n",
+    "    weekly_hardware_sale_rows = weekly_hardware_sale_table.find_all('td', attrs={})\n",
+    "    weekly_hardware_sale_rows = [row.text.strip() for row in weekly_hardware_sale_rows]   \n",
+    "    # Distribute data of diff fields into diff lists\n",
+    "    for i in range(len(weekly_hardware_sale_rows)):\n",
+    "        if i%4 == 0:\n",
+    "            platforms.append(weekly_hardware_sale_rows[i])\n",
+    "        elif i%4 == 1:\n",
+    "            weekly_sales.append(weekly_hardware_sale_rows[i])\n",
+    "        elif i%4 == 2:\n",
+    "            weekly_sales_changes.append(weekly_hardware_sale_rows[i])\n",
+    "        else:\n",
+    "            total_sales.append(weekly_hardware_sale_rows[i])\n",
+    "            \n",
+    "    weekly_hardware_sales_df = pd.DataFrame({'Platforms': platforms, \\\n",
+    "                                      'Weekly Sales': weekly_sales, \\\n",
+    "                                      'Weekly Sales Changes': weekly_sales_changes, \\\n",
+    "                                      'Total Sales': total_sales\n",
+    "                                     })\n",
+    "    return weekly_hardware_sales_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Platforms</th>\n",
+       "      <th>Total Sales</th>\n",
+       "      <th>Weekly Sales</th>\n",
+       "      <th>Weekly Sales Changes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DS</td>\n",
+       "      <td>56,338,561</td>\n",
+       "      <td>1,353,850</td>\n",
+       "      <td>(+105%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wii</td>\n",
+       "      <td>15,192,774</td>\n",
+       "      <td>673,069</td>\n",
+       "      <td>(+46%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PSP</td>\n",
+       "      <td>29,233,466</td>\n",
+       "      <td>446,202</td>\n",
+       "      <td>(+60%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>X360</td>\n",
+       "      <td>13,704,598</td>\n",
+       "      <td>414,403</td>\n",
+       "      <td>(+82%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PS3</td>\n",
+       "      <td>6,638,792</td>\n",
+       "      <td>376,441</td>\n",
+       "      <td>(+46%)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Platforms Total Sales Weekly Sales Weekly Sales Changes\n",
+       "0        DS  56,338,561    1,353,850              (+105%)\n",
+       "1       Wii  15,192,774      673,069               (+46%)\n",
+       "2       PSP  29,233,466      446,202               (+60%)\n",
+       "3      X360  13,704,598      414,403               (+82%)\n",
+       "4       PS3   6,638,792      376,441               (+46%)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = datetime(2007, 11, 20)\n",
+    "get_weekly_hardware_sales(date)"
    ]
   },
   {
