Saved data to csv.

--- a/console_wars.ipynb
+++ b/console_wars.ipynb
@@ -840,6 +840,175 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "wii_sales_df.to_csv('./datasets/wii_sales.csv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Wii U Sales Over Time\n",
+    "\n",
+    "From 25th Nov 2006 to 18th Nov 2017"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "start_date = datetime(2012, 11, 17)\n",
+    "end_date = datetime(2017, 11, 18)\n",
+    "\n",
+    "date_p = start_date\n",
+    "wiiu_sales_date = []\n",
+    "wiiu_sales = []\n",
+    "\n",
+    "while date_p <= end_date:\n",
+    "    \n",
+    "    weekly_hardware_sales = get_weekly_hardware_sales(date_p)\n",
+    "    # Check if WiiU is in sale\n",
+    "    if 'WiiU' in weekly_hardware_sales['Platforms'].values:\n",
+    "        wiiu_sales_date.append(date_p)\n",
+    "        wiiu_sales.append(weekly_hardware_sales[weekly_hardware_sales['Platforms']=='WiiU']['Total Sales'].values[0])\n",
+    "    \n",
+    "    date_p += timedelta(7)\n",
+    "    time.sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Total Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>2017-09-16</td>\n",
+       "      <td>13,524,328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>2017-09-23</td>\n",
+       "      <td>13,525,073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>2017-09-30</td>\n",
+       "      <td>13,525,810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>2017-10-07</td>\n",
+       "      <td>13,526,483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>2017-10-14</td>\n",
+       "      <td>13,527,170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>2017-10-21</td>\n",
+       "      <td>13,527,821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>2017-10-28</td>\n",
+       "      <td>13,528,454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>2017-11-04</td>\n",
+       "      <td>13,529,045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>2017-11-11</td>\n",
+       "      <td>13,529,611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>2017-11-18</td>\n",
+       "      <td>13,530,264</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date Total Sales\n",
+       "251 2017-09-16  13,524,328\n",
+       "252 2017-09-23  13,525,073\n",
+       "253 2017-09-30  13,525,810\n",
+       "254 2017-10-07  13,526,483\n",
+       "255 2017-10-14  13,527,170\n",
+       "256 2017-10-21  13,527,821\n",
+       "257 2017-10-28  13,528,454\n",
+       "258 2017-11-04  13,529,045\n",
+       "259 2017-11-11  13,529,611\n",
+       "260 2017-11-18  13,530,264"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiiu_sales_df = pd.DataFrame({'Date': wiiu_sales_date, \\\n",
+    "                             'Total Sales': wiiu_sales \\\n",
+    "                                     })\n",
+    "wiiu_sales_df[-10:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "wiiu_sales_df.to_csv('./datasets/wiiu_sales.csv', sep='\\t')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -986,6 +1155,15 @@
     "                             'Total Sales': ps3_sales \\\n",
     "                                     })\n",
     "PS3_sales_df[-10:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PS3_sales_df.to_csv('./datasets/ps3_sales.csv', sep='\\t')"
    ]
   },
   {
@@ -1136,6 +1314,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x360_sales_df.to_csv('./datasets/x360_sales.csv', sep='\\t')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1280,6 +1469,17 @@
     "                             'Total Sales': ns_sales \\\n",
     "                                     })\n",
     "ns_sales_df[-10:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ns_sales_df.to_csv('./datasets/ns_sales.csv', sep='\\t')"
    ]
   },
   {
@@ -1430,6 +1630,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ps4_sales_df.to_csv('./datasets/ps4_sales.csv', sep='\\t')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1574,6 +1785,17 @@
     "                             'Total Sales': xone_sales \\\n",
     "                                     })\n",
     "xone_sales_df[-10:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "xone_sales_df.to_csv('./datasets/xone_sales.csv', sep='\\t')"
    ]
   },
   {
